pom.xml: try to add argLine param to open java.lang